2004-07-28  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.8): BUMP: 4.0.8a

2004-07-28  Dossy Shiobara <dossy@panoptic.com>

	* configure (1.15.2.1), configure.in (1.13.2.1): Clean up
	  configure.in, regenerate configure with autoconf2.13, and clear
	  CCRPATH/LDRPATH if CCRFLAGS/LDRFLAGS are empty.  Closes SF Bug
	  #640754.  Backported from HEAD.

2004-07-19  tag aolserver_v40_r7

2004-07-19  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.7, aolserver_v40_r7): BUMP: 4.0.7

2004-07-18  Dossy Shiobara <dossy@panoptic.com>

	* nsd/return.c (1.33.2.6): Fix bug where internal redirect for 401
	  omitted including the HTTP auth.  "WWW-Authenticate:" header.
	  Fixes bug #674033.  Backported from HEAD.

2004-07-18  Dossy Shiobara <dossy@panoptic.com>

	* nsd/: nsd.h (1.77.2.6), init.c (1.5.2.1), nsconf.c (1.32.2.2):
	  Ns_GetAddrByHost() reports errors via Ns_Log(), so calls to it
	  should be done after Ns_Log has been initialized, otherwise very
	  unhelpful error messages are produced.  In particular, this
	  happens when the server is started and the hostname as returned
	  by gethostname() cannot be resolved, because the network
	  interface is down AND no entry exists in /etc/hosts.	Closes SF
	  Bug #868362.	Backported from HEAD.

2004-07-16  Dossy Shiobara <dossy@panoptic.com>

	* nsd/driver.c (1.17.2.6): Setting request->method to static
	  storage, which later gets ns_free()'d in Ns_FreeRequest(), caused
	  server to crash.

2004-07-16  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.6): BUMP: 4.0.7a

2004-07-16  tag aolserver_v40_r6

2004-07-16  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.5): BUMP: 4.0.6

2004-07-15  Tim Suh <suhti@aol.com>

	* nsd/return.c: keepalive is enabled for response codes other than 200 

2004-07-13  Dossy Shiobara <dossy@panoptic.com>

	* nsd/: driver.c (1.17.2.5), op.c (1.11.2.1): Change to make HTTP
	  request "Host:" header mandatory for HTTP/1.1 connections by